# csad2526KI409ShmahalaRostyslav24

./: CMakeLists.txt  README.md  ci.cmd  ci.sh
.github/workflows/: ci.yml
tests/: unit_tests.cpp
